ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: athlete.com
    http:
      paths:
      - path: /nodejs
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              name: http
